# finalGirl

./: README.md  pyproject.toml
src/final_girl_crew/: crew.py  main.py
src/final_girl_crew/config/: agents.yaml  tasks.yaml
src/final_girl_crew/content/: map.json
